@@ -1,6 +1,6 @@
 AC_PREREQ(2.57)
 
-AC_INIT([liblo], [0.14], [steve@plugin.org.uk])
+AC_INIT([liblo], [0.15], [steve@plugin.org.uk])
 
 # libtool version: current:revision:age
 #
@@ -15,7 +15,7 @@ AC_INIT([liblo], [0.14], [steve@plugin.org.uk])
 #
 # If any interfaces have been removed since the last public release, then set
 # age to 0.
-LO_SO_VERSION=3:0:3
+LO_SO_VERSION=4:0:4
 
 AC_CONFIG_SRCDIR([src/address.c])
 AM_CONFIG_HEADER([config.h])
